--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Splitwise" : {
+    "BaseUrl" : "https://secure.splitwise.com/api/v3.0",
+    "Token" : "<API KEY HERE>"
+  }
 }
